fixed some html.  Also moved the fancy onblur to use event click listeners on the document instead to fix firefox/safari issues.  Also fixed spacing and padding

--- a/src/Dropdown/Dropdown_fullView.scss
+++ b/src/Dropdown/Dropdown_fullView.scss
@@ -41,6 +41,10 @@
         text-align: left;
         box-sizing: border-box;
 
+        &.checkmark {
+          padding: 4px 16px;
+        }
+
         span.icon-padding {
             padding-left: 8px;
         }
@@ -49,8 +53,12 @@
       a {
         color: $pe-color-charcoal;
         text-decoration: none;
-        padding: 4px 50px;
+        padding: 4px 24px;
         display: block;
+
+        &.checkmark {
+          padding: 4px 42px;
+        }
       }
     }
   }
